--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
         "guzzlehttp/guzzle": "~5.3.3||~6.0||~7.0",
         "guzzlehttp/psr7": "^1.8.4||^2.2.1",
         "facebook/graph-sdk" : "^5.1",
-        "phpmailer/phpmailer": "^6.6",
         "calcinai/php-imagick": "^0.1.2",
         "pedrosancao/php-otp": "^1.1",
         "noweh/twitter-api-v2-php": "^1.7",
@@ -24,7 +23,8 @@
         "utxo-one/twitter-ultimate-php": "^0.1.6",
         "simplehtmldom/simplehtmldom": "^2.0@RC",
         "flutterwavedev/flutterwave-v3": "^1.0",
-        "paragonie/sodium_compat": "^1.19"
+        "paragonie/sodium_compat": "^1.19",
+        "phpmailer/phpmailer": "*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.0",
