--- a/.htaccess
+++ b/.htaccess
@@ -53,6 +53,7 @@ RewriteRule ^v2/login auth/sign-in.php [NC,L]
 RewriteRule ^v2/new auth/sign-up.php [NC,L]
 RewriteRule ^v2/register auth/register.php [NC,L]
 RewriteRule ^v2/verify auth/verify.php [NC,L]
+RewriteRule ^v2/reset auth/reset.php [NC,L]
 RewriteRule ^v2/password auth/reset-password.php [NC,L]
 RewriteRule ^v2/overheat error/overheat.php [NC,L]
 RewriteRule ^v2/authentication auth/two-steps.php [NC,L]
